<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notification_root"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:clipToOutline="true">

    <ImageView
        android:id="@+id/notification_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/notification_artwork"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notification_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/notification_artist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="11sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/notification_previous"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_previous"
            android:padding="7dp"
            android:src="@drawable/ic_widget_skip_previous" />

        <FrameLayout
            android:layout_width="40dp"
            android:layout_height="40dp">

            <ImageView
                android:id="@+id/notification_play_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:src="@drawable/ic_notification_control_surface" />

            <ImageButton
                android:id="@+id/notification_play_pause"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/desc_play_pause"
                android:padding="10dp"
                android:src="@drawable/ic_widget_play" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/notification_next"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/desc_next"
            android:padding="7dp"
            android:src="@drawable/ic_widget_skip_next" />
    </LinearLayout>
</FrameLayout>
